add ResponseDto for getFilteredBatche and fix recursion